@@ -10581,3 +10581,11 @@ v0.92.0.11:
     - Default: false
     - When true town and nations with a bank balance of less than or equal to zero will not appear on the town and nation lists.
   - Fix admins with the adminbypass mode active not receiving teleport warmups and cooldowns.
+  - Add the option to make the town bank cap plot-based.
+    - Closes #8045.
+  - New Config Option: economy.banks.town_bank_cap_is_plotbased
+    - Default: false
+    - When true the bank cap is plot-based. The number of townblocks/plots a town has claimed will be multiplied by the above town_bank_cap value.
+  - New Config Option: economy.banks.plotbased_bank_cap_uses_town_level_modifier
+    - Default: false
+    - When true the plot-based bank cap will also be multiplied by the town_levels' bank cap modifiers.
